Updated multiple files to  create the manage circles component. - Updated CSS on calendar, header, and root to accomodate the new component -  Fixed overlapping CSS class names that affected styling of header - Adjusted responsive design

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,7 +11,7 @@ body {
     display: grid;
     grid-template-columns: auto 1fr auto;
     align-items: center;
-    padding: 14px 40px;
+    padding: 0px 40px;
     background: white;
 }
 
@@ -20,10 +20,12 @@ body {
 .header-right {
     display: flex;
     align-items: center;
+
 }
 
 .header-center {
     justify-content: center;
+    text-align: center;
 }
 
 .logo,
@@ -33,6 +35,7 @@ body {
     display: block;
 }
 
+
 .hamburger,
 .brand-text,
 .activity-icon {
@@ -40,20 +43,28 @@ body {
 }
 
 .profile-pic {
-    border-radius: 50%;
-    padding: 0 20px;
-    height: 60px;
     width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+    display: block;
     cursor: pointer;
+    margin: 0 20px;
+    padding: 0;
 }
 
 .notifications {
     height: 35px;
+    width: 35px;
+    object-fit: contain;
+    display: block;
     cursor: pointer;
 }
 
-.logo {
+.logo-header {
+    display: block;
     cursor: pointer;
+    padding: 30px 0;
 }
 
 /* mobile styling*/
@@ -63,7 +74,7 @@ body {
         padding: 14px 20px;
     }
 
-    .logo,
+    .logo-header,
     .circle-name,
     .notifications,
     .profile-pic {
@@ -91,7 +102,8 @@ body {
 
     .hamburger-open,
     .activity-open {
-        margin-top: 20px;
+        margin-top: 0;
+        margin-left: 0;
     }
 
     .mobile-menu,
@@ -100,8 +112,10 @@ body {
         top: 72px;
         left: 0;
         width: 100%;
+        height: calc(100% - 72px);
         background: white;
         padding: 20px;
         box-sizing: border-box;
+        overflow-y: auto;
     }
 }
